<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/loginpage">


    <ImageView
        android:id="@+id/iv_product"
        android:layout_width="wrap_content"
        android:layout_height="126dp"
        android:adjustViewBounds="true"
        android:maxHeight="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_signup_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:gravity="left"
        android:hint="@string/prompt_name"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_product" />


    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_signup_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="left"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/et_signup_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_signup_name"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_name"
        app:passwordToggleEnabled="true"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_signup_password2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:gravity="left"
        android:hint="@string/RetypPassword"
        android:inputType="textPassword"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/et_signup_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_signup_name"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_name" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_signup_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:gravity="left"
        android:hint="@string/prompt_phone"
        android:inputType="phone"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/et_signup_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_signup_password"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_password" />


    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_signup_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="left"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/et_signup_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_signup_name"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_phone" />


    <Button
        android:id="@+id/btn_signup"
        android:layout_width="242dp"
        android:layout_height="52dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginStart="116dp"
        android:background="@drawable/border_style"
        android:text="@string/SignUp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
