<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="18">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="4"
        android:src="@drawable/logo" />


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".5"
            app:cardBackgroundColor="#eaeaea"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/About_company"
                android:textStyle="bold"
                tools:paddingLeft="8dp" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <!---->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp">


            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_weight=".5"
                app:cardBackgroundColor="#eaeaea"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="6"

                    >

                    <ImageView
                        android:id="@+id/iv_abbas"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:src="@drawable/locations" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/abbas" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingBottom="2dp"
                        android:text="@string/abbas_num" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_weight=".5"
                app:cardBackgroundColor="#eaeaea"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="6">

                    <ImageView
                        android:id="@+id/iv_makram"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:src="@drawable/locations" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/makram" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingBottom="2dp"
                        android:text="@string/makram_num" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp">


            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_weight=".5"
                app:cardBackgroundColor="#eaeaea"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="6">

                    <ImageView
                        android:id="@+id/iv_mobtadian"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:src="@drawable/locations" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/mobtadian" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingBottom="2dp"
                        android:text="@string/mobtadian_num" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_weight=".5"
                app:cardBackgroundColor="#eaeaea"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="6">

                    <ImageView
                        android:id="@+id/iv_october"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:src="@drawable/locations" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/october" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingBottom="2dp"
                        android:text="@string/october_num" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>


    </LinearLayout>

    <!---->


    <!---->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/iv_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/iv_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/linked" />

            <ImageView
                android:id="@+id/iv_youtube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/youtube1" />

            <ImageView
                android:id="@+id/iv_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/twitter1" />

            <ImageView
                android:id="@+id/iv_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/web1" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Follow us"
            android:textSize="18dp"
            android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>